--- a/client/src/styles/Subtask.scss
+++ b/client/src/styles/Subtask.scss
@@ -24,6 +24,8 @@
       .customCheckbox {
         width: 20px;
         height: 20px;
+        min-width: 20px;
+        min-height: 20px;
         border: 1px solid #3D3D3D;
         border-radius: 10px;
         display: flex;
@@ -37,7 +39,7 @@
       }
 
       .subtaskName {
-        padding-left: 13px;
+        padding-left: 10px;
       }
     }
 
