--- a/client/src/styles/Task.scss
+++ b/client/src/styles/Task.scss
@@ -65,12 +65,15 @@
       display: block;
       color: $fadedFont;
       font-size: 0.9em;
+      padding: 0 0 10px 0;
     }
 
     h3 {
       color: $fadedFont;
       text-transform: capitalize;
       text-align: center;
+      margin: 0;
+      padding: 0 0 10px 0;
     }
 
     /* Category */
