--- a/client/src/styles/NewTask.scss
+++ b/client/src/styles/NewTask.scss
@@ -28,6 +28,7 @@
   padding: 15px;
   text-align: center;
   box-shadow: 0.5px 0.5px 3px 3px #dfdfdf;
+  z-index: 10;
 
   .linkBtn {
     max-width: $elMaxWidth;
