--- a/client/src/styles/Subtask.scss
+++ b/client/src/styles/Subtask.scss
@@ -46,7 +46,7 @@
     .priceErase {
       .subtaskPrice {
         padding-right: 5px;
-        color: $fadedFont;
+        color: $colorBoxFont;
         font-size: 0.9em;
       }
 
@@ -65,7 +65,7 @@
     text-align: right;
     display: block;
     padding-top: 10px;
-    color: $fadedFont;
+    color: $colorBoxFont;
   }
 
   .addSubtask {
