--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -48,8 +48,7 @@ $deleteBtn: #b13046;
 $deleteBtnHover: #891e30;
 
 $faded: #a4a4a4;
-$fadedFont: #858585;
-
+$colorBoxFont: #858585;
 
 /* Main */
 .mainContainer {
