--- a/client/src/styles/Task.scss
+++ b/client/src/styles/Task.scss
@@ -9,7 +9,7 @@
   border-radius: $containerRadius;
   padding: 15px;
   margin: 10px;
-  box-shadow: 0.5px 0.5px 2px 2px #dfdfdf;
+  box-shadow: 0.5px 0.5px 5px 1px $colorBoxFont;
   max-width: 300px;
   text-align: left;
   position: relative;
@@ -18,7 +18,7 @@
   .optionsContainer {
     position: absolute;
     right: 15px;
-    box-shadow: 0.1px 0.1px 2px 1.5px #a4a4a4;
+    box-shadow: 0.1px 0.1px 2px 1px $colorBoxFont;
     padding: 5px 10px;
     top: 35px;
     background-color: #fff;
@@ -28,7 +28,7 @@
     border-radius: 2px;
 
     &:hover {
-      background-color: #a4a4a4;
+      background-color: $colorBoxFont;
       color: #fff;
       cursor: pointer;
     }
@@ -36,6 +36,7 @@
     span {
       display: flex;
       align-items: center;
+      flex-direction: row;
 
       svg {
         margin-left: 10px;
@@ -106,13 +107,13 @@
 
   .taskPrice {
     display: block;
-    color: $fadedFont;
+    color: $colorBoxFont;
     font-size: 0.9em;
     padding: 0 0 10px 0;
   }
 
   h3 {
-    color: $fadedFont;
+    color: $colorBoxFont;
     text-transform: capitalize;
     text-align: center;
     margin: 0;
