--- a/src/styles/Task.scss
+++ b/src/styles/Task.scss
@@ -10,10 +10,11 @@
   padding: 15px;
   margin: 10px;
   box-shadow: 0.5px 0.5px 5px 1px $colorBoxFont;
-  max-width: 300px;
+  max-width: 480px;
   text-align: left;
   position: relative;
   min-width: 275px;
+  word-break: break-all;
 
   .optionsContainer {
     position: absolute;
@@ -51,7 +52,14 @@
     display: flex;
     justify-content: space-between;
     font-weight: $commonWeight;
-    max-height: 25px;
+    align-items: center;
+
+    .lastUpdate {
+      color: $colorBoxFont;
+      font-size: 0.7em;
+      font-weight: 400;
+      margin-right: -25px;
+    }
 
     .options {
       font-weight: 900;
@@ -63,6 +71,12 @@
 
       &:hover {
         cursor: pointer;
+      }
+    }
+
+    span {
+      &:first-child {
+        padding-right: 15px;
       }
     }
   }
