--- a/src/styles/NewTask.scss
+++ b/src/styles/NewTask.scss
@@ -83,6 +83,14 @@
   display: flex;
   flex-direction: column;
   padding: 0 15px;
+  max-width: 768px;
+  margin: 0 auto;
+  position: relative;
+
+  .required {
+    color: red;
+    display: contents;
+  }
 
   h1 {
     text-align: center;
