--- a/src/styles/Task.scss
+++ b/src/styles/Task.scss
@@ -20,11 +20,11 @@
     position: absolute;
     right: 15px;
     box-shadow: 0.1px 0.1px 2px 1px $colorBoxFont;
-    padding: 5px 10px;
+    padding: 7px 10px;
     top: 35px;
     background-color: #fff;
     z-index: 5;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-weight: 500;
     border-radius: 2px;
 
@@ -38,9 +38,10 @@
       display: flex;
       align-items: center;
       flex-direction: row;
+      width: fit-content;
 
       svg {
-        margin-left: 10px;
+        margin-left: 5px;
       }
     }
 
@@ -48,11 +49,11 @@
 
   .categoryName {
     border-bottom: 1px solid $faded !important;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     display: flex;
     justify-content: space-between;
-    font-weight: $commonWeight;
     align-items: center;
+    font-weight: 800;
 
     .lastUpdate {
       color: $colorBoxFont;
@@ -62,8 +63,9 @@
     }
 
     .options {
-      font-weight: 900;
-      max-width: 5px;
+      position: absolute;
+      right: 9px;
+      font-size: 1.3em;
 
       &::after {
         content: '\2807';
@@ -84,14 +86,14 @@
   .nameStatus {
     display: flex;
     padding: 10px 0;
-    max-width: 220px;
 
     h2 {
       margin: 0;
     }
 
     label {
-      padding: 5px;
+      margin-left: 25px;
+      height: fit-content;
 
       input {
         display: none;
