--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -41,6 +41,7 @@ $elMaxWidth: 275px;
 $inputMargin: 10px 0;
 $inputPadding: 10px 5px;
 
+/* Colours */
 $createEditBtn: #1f7b83;
 $createEditBtnHover: #146066;
 
@@ -49,6 +50,11 @@ $deleteBtnHover: #891e30;
 
 $faded: #a4a4a4;
 $colorBoxFont: #858585;
+
+/* Category Colours */
+$foodCategory: #f99457;
+$workCategory: #a05ce8;
+$otherCategory: #3AA652;
 
 /* Main */
 .mainContainer {
