--- a/src/styles/Task.scss
+++ b/src/styles/Task.scss
@@ -1,3 +1,8 @@
+@mixin categoryConcluded($bgColor, $borderColor) {
+  background-color: $bgColor;
+  border-color: $borderColor !important;
+}
+
 .taskList {
   display: flex;
   flex-wrap: wrap;
@@ -15,6 +20,18 @@
   position: relative;
   min-width: 275px;
   word-break: break-all;
+
+  .Other {
+    color: $otherCategory;
+  }
+
+  .Work {
+    color: $workCategory;
+  }
+
+  .Food {
+    color: $foodCategory;
+  }
 
   .optionsContainer {
     position: absolute;
@@ -44,7 +61,6 @@
         margin-left: 5px;
       }
     }
-
   }
 
   .categoryName {
@@ -59,7 +75,7 @@
       color: $colorBoxFont;
       font-size: 0.7em;
       font-weight: 400;
-      margin-right: -25px;
+      margin-right: 15px;
     }
 
     .options {
@@ -97,6 +113,14 @@
 
       input {
         display: none;
+      }
+
+      .OtherConcluded {
+        @include categoryConcluded($otherCategory, #fff);
+      }
+
+      .toConclude {
+        @include categoryConcluded(#fff, #000);
       }
 
       .customCheckbox {
